--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "brain_games"}]
 [tool.poetry.dependencies]
 python = "^3.8.1"
 prompt = "^0.4.1"
+sympy = "^1.11.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -24,3 +25,4 @@ brain-even = "brain_games.scripts.brain_even:main"
 brain-calc = "brain_games.scripts.brain_calc:main"
 brain-gcd = "brain_games.scripts.brain_gcd:main"
 brain-progression = "brain_games.scripts.brain_progression:main"
+brain-prime = "brain_games.scripts.brain_prime:main"
